bug bug bug chrome overflow

--- a/style.css
+++ b/style.css
@@ -428,6 +428,7 @@ footer p{
 	div.home1{
 		flex-direction: column;
 		justify-content: center;
+		width: 100vw;
 	}
 
 	div.photoMe{
